refactor listInteractions route and service